--- a/server/static/html/octal.html
+++ b/server/static/html/octal.html
@@ -73,6 +73,9 @@
     <title>OCTAL{% block title %}{% endblock %}</title>
 
     {% endblock %}
+
+    {% block head-extend %}
+    {% endblock %}
   </head>
 
   <body>
